# telegram-bouncer-bot

./: .releaserc.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  update-package-version.sh
.github/workflows/: cicd.yml  pr.yml
i18n/de/: telegram_bouncer_bot.ftl
i18n/en/: telegram_bouncer_bot.ftl
i18n/fr/: telegram_bouncer_bot.ftl
src/: countersign.rs  main.rs  pin_history.rs  review.rs
